--- a/index.html
+++ b/index.html
@@ -2,9 +2,41 @@
 <html>
 
 <head>
-  <title>WIP</title>
+  <title>Kurock.io - Software and Consulting</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <h1>WIP</h1>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="software.html">Software</a></li>
+      <li><a href="consulting.html">Consulting</a></li>
+      <li><a href="about.html">About</a></li>
+    </ul>
+  </nav>
+  <div class="wrapper" id="wrapper">
+    <header>
+      <div class="title-text">
+        <h1>Kurock</h1>
+        <h2>Software and Consulting</h2>
+      </div>
+      <img src="img/sil.png" class="bg-image-front">
+      <div class="blur"></div>
+      <img src="img/bg.jpg" class="bg-image bg-image-behind">
+    </header>
+    <main>
+      <div class="nav-bg">
+        <div class="nav-bg-inner"></div>
+      </div>
+      <div class="content">
+        <h2>Software and Consulting</h2>
+        <p>Coming soon...</p>
+        <div style="height: 2000px"></div>
+      </div>
+    </main>
+  </div>
+  <script src="script.js"></script>
 </body>
+
+</html>
