--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <ul>
       <li><a href="/#" onclick="navigateScroll('main')">Home</a></li>
       <li><a href="/#" onclick="navigateScroll('about')">About</a></li>
-      <li><a href="/#" onclick="navigateScroll('technologies')">Expertiesen</a></li>
+      <li><a href="/#" onclick="navigateScroll('technologies')">Expertise</a></li>
+      <li><a href="/#" onclick="navigateScroll('contact')">Kontakt</a></li>
       <li><a href="/impressum.html">Impressum</a></li>
     </ul>
   </nav>
   <div class="wrapper" id="wrapper">
+    <a id="main"></a>
     <header>
       <div class="title-text">
         <h1>Kurock</h1>
@@ -30,7 +32,7 @@
         <a href="#" onclick="navigateScroll('main');"><span></span></a>
       </div>
     </header>
-    <main id="main">
+    <main>
       <div id="nav-bg" class="">
         <div class="nav-bg-inner"></div>
       </div>
@@ -62,10 +64,9 @@
           <br><br>
           Ich freue mich darauf, gemeinsam mit Ihnen die Möglichkeiten der Technologie zu erkunden und Lösungen zu
           entwickeln, die nicht nur effizient sind, sondern auch Ihre Erwartungen übertreffen.
-
         </p>
         <a id="expertise"></a>
-        <h2 id="technologies" class="header-title">Expertiesen</h2>
+        <h2 id="technologies" class="header-title">Expertise</h2>
         <div class="language-container">
           <img alt="JavaScript" title="JavaScript" src="assets/img/logos/js.png" />
           <img alt="Golang" title="Golang" style="width: 100px" src="assets/img/logos/go.png" />
@@ -171,6 +172,15 @@
               zu optimieren und Ihre digitale Transformation voranzutreiben.
             </p>
           </div>
+        </div>
+        <a id="contact"></a>
+        <h2 class="header-title">Kontakt</h2>
+        <div class="social-media">
+          <a href="https://www.linkedin.com/in/marvin-kurock-34857b1b6/" target="_blank" rel="noopener noreferrer"><img
+              src="assets/img/linkedin.png" />LinkedIn</a>
+          <a href="https://www.xing.com/profile/Marvin_Kurock/" target="_blank" rel="noopener noreferrer"><img
+              src="assets/img/xing.png" />XING</a>
+          <a href="" rel="noopener noreferrer"><img src="assets/img/mail.png" />marvin(at)kurock.io</a>
         </div>
       </div>
       <footer>(c) 2024 Marvin Kurock - kurock.io</footer>
